@@ -1,5 +1,8 @@
 2009-11-12  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tclClock.c (TclClockInit):	Do not create [clock] support
+	commands in safe interps.
+
 	* tests/io.test:	New test io-53.11 to test for [Bug 2895565].
 
 2009-11-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
